syntax = "proto3";

package fainder;
option java_package = "de.tuberlin.dima.fainder";
option java_multiple_files = true;

service LuceneConnector {
  rpc Evaluate (QueryRequest) returns (QueryResponse);
  rpc RecreateIndex (RecreateIndexRequest) returns (RecreateIndexResponse);
}

message QueryRequest {
  string query = 1;
  repeated int32 doc_ids = 2;
  bool enable_highlighting = 3;  // Add highlighting flag
}

// Change HighlightEntry to FieldHighlights with a map of field highlights
message FieldHighlights {
    map<string, string> fields = 1;
}

message QueryResponse {
  repeated int32 results = 1;
  repeated float scores = 2;
  map<int32, FieldHighlights> highlights = 3;  // Changed to map from doc_id to field highlights
}

message RecreateIndexRequest {}

message RecreateIndexResponse {
  bool success = 1;
  string message = 2;
}
